--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Xi Li"
-  avatar           : "xili44.jpg"
+  avatar           : "profile.png"
   bio              : "Assistant Professor of Marketing"
   location         : 
   employer         : "City University of Hong Kong"
