--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Xi Li's Homepage"
 title_separator          : "-"
 name                     : &name "Your Name"
 description              : &description "personal description"
-url                      : https://www.cb.cityu.edu.hk/staff/xili44/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://mmistakes.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : 
 teaser                   : "profile.png"
