--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 # main links links
 main:
    
-  - title: "CV"
+  - title: "[CV](http://academicpages.github.io/files/paper1.pdf)"
     url: /cv/
 
