--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,5 +2,5 @@
 main:
    
   - title: "CV"
-    url: https://github.com/xitheory/xitheory.github.io/blob/master/files/CVwebsite.pdf
+    url: xitheory.github.io/files/CVwebsite.pdf
 
