--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,5 +2,5 @@
 main:
    
   - title: "CV"
-    url: xitheory.github.io/files/CVwebsite.pdf
+    url: https://xitheory.github.io/files/CVwebsite.pdf
 
