--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Xi Li"
   avatar           : "http://xitheory.github.io/images/profile.png"
   bio              : "Assistant Professor of Marketing"
-  location         : 
+  location         : "Hong Kong"
   employer         : "City University of Hong Kong"
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=jOf9beQAAAAJ&hl=zh-CN"
