--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "http://xitheory.github.io/images/profile.png"
   bio              : "Assistant Professor of Marketing"
   location         : "Hong Kong"
-  employer         : "City University of Hong Kong"
+  employer         : 
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=jOf9beQAAAAJ&hl=zh-CN"
   email            : "xi.li@cityu.edu.hk"
