--- a/_config.yml
+++ b/_config.yml
@@ -89,7 +89,7 @@ author:
   googlescholar    : "https://scholar.google.com/citations?user=jOf9beQAAAAJ&hl=zh-CN"
   email            : "xi.li@cityu.edu.hk"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
-  uri              :
+  uri              : "https://www.cb.cityu.edu.hk/staff/xili44/"
   bitbucket        :
   codepen          :
   dribbble         :
