--- a/_config.yml
+++ b/_config.yml
@@ -7,14 +7,14 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Xi Li's Homepage"
+title                    : "Yan Xiong's Homepage"
 title_separator          : "-"
 name                     : &name "Your Name"
 description              : &description "personal description"
-url                      : https://xitheory.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://yanxiongfina.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : 
-teaser                   : "http://xitheory.github.io/images/profile.png"
+teaser                   : "http://yanxiongfina.github.io/images/profile.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
 future                   : true
